JVM calls Qt